2007-05-29  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: replaced two wrong
	g_object_ref's by g_object_unref's in the copy_async implementation

2007-05-28  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_dummy_connection_check): Strip whitespace from the dummy account ID 
	found in the special file.
	
2007-05-28  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_get_current_iap_id),
	(on_dummy_connection_check),
	(tny_maemo_conic_device_instance_init),
	(tny_maemo_conic_device_finalize): Use a file ($HOME/maemo_conic_dummy_id) 
	instead of an environment variable to set the dummy ID when using 
	scratchbox so we can check it for changes every 1 second.
	
2007-05-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Experimental reuse of the get-message service for IMAP

2007-05-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Refactored the TnyGtkPasswordDialog
	* Various fixes for the OLPC build
	* Various fixes for the Maemo mistal and gregale builds

2007-05-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Experimental connection recovery for IMAP
	* Letting IDLE/PushE-mail support code cope with connection failures

2007-05-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* libtinymail-camel-tny-camel-send-queue.c: various locking fixes

2007-05-24  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_get_iap): When running in scratchbox, 
	make sure that this returns an instance for a more complete fake 
	implementation.

2007-05-23  Murray Cumming  <murrayc@murrayc.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
	(recurse_folders_sync): Do not assume that the row instance is a 
	TnyFolderStore, because not all TnyFolders are TnyFolderStores. 
	This allows us to use this tree model with TnyMergeFolder.

2007-05-22  Murray Cumming  <murrayc@murrayc.com>
