@@ -213,8 +213,8 @@ pop3_build_folder_info(CamelPOP3Store *store, const char *folder_name)
 	fi = camel_folder_info_new ();
 
 	fi->full_name = g_strdup(folder_name);
-	fi->unread = -1;
-	fi->total = -1;
+	fi->unread = 0;
+	fi->total = 0;
 
 	my_du (folder_dir, &msize);
 
