@@ -1,3 +1,9 @@
+2007-05-29  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Fixed an error message when the account's status is offline and a
+	cached version of a message is not available in tny_folder_get_msg and
+	tny_folder_get_msg_async
+
 2007-05-29  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c: replaced two wrong
